--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,10 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-# dist - Keeping this for GitHub Pages deployment
+dist
 dist-ssr
 *.local
+# docs - Keeping this for GitHub Pages deployment
 
 # Editor directories and files
 .vscode/*
